Simpler navbar, simpler news: all together in one list

--- a/_config.yml
+++ b/_config.yml
@@ -6,3 +6,9 @@ exclude: [ Makefile ]
 markdown: redcarpet
 redcarpet:
   extensions: [ "autolink" ]
+defaults:
+  -
+    scope:
+      path: ""
+    values:
+      layout: "post"
