--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ name: igraph &ndash; the network analysis package
 destination: docs
 future: false
 pygments: true
-include: [ .htaccess, .htpasswd, _static, _sources, _images ]
+include: [ .htaccess, .htpasswd, _static, _sources, _images, .nojekyll ]
 exclude: [ Makefile ]
 markdown: redcarpet
 redcarpet:
