updated for Jekyll 3.8.5; removed old sitemap plugin as we are using the official one now

--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,9 @@ exclude: [ Makefile ]
 markdown: redcarpet
 redcarpet:
   extensions: [ "autolink" ]
+url: "https://igraph.org"
+plugins:
+  - jekyll-sitemap
 defaults:
   -
     scope:
