fixed default layout for new Jekyll version; ignoring Gemfile in output

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ destination: docs
 future: false
 highlighter: pygments
 include: [ .htaccess, .htpasswd, _static, _sources, _images, .nojekyll ]
-exclude: [ Makefile ]
+exclude: [ Gemfile, Gemfile.lock, Makefile ]
 markdown: redcarpet
 redcarpet:
   extensions: [ "autolink" ]
