added documentation about basic requirements of building the homepage

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ destination: docs
 future: false
 highlighter: pygments
 include: [ .htaccess, .htpasswd, _static, _sources, _images, .nojekyll ]
-exclude: [ Gemfile, Gemfile.lock, Makefile ]
+exclude: [ Gemfile, Gemfile.lock, Makefile, REQUIREMENTS.md ]
 markdown: redcarpet
 redcarpet:
   extensions: [ "autolink" ]
