--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 name: igraph &ndash; the network analysis package
 destination: docs
-future: false
+future: true
 highlighter: pygments
 include: [ .htaccess, .htpasswd, _static, _sources, _images, .nojekyll ]
 exclude: [ _build, _tools, Gemfile, Gemfile.lock, Makefile, REQUIREMENTS.md ]
