added redirect from /python/doc to /python/#docs, closes #301

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 /_includes/igraph-rversion
 /_includes/igraph-pyversion
 /c/doc
-/python/doc
+/python/doc/*
+!/python/doc/index.html
 /r/doc
 /stamp
