updated Python documentation generation mechanism to PyDoctor

--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,10 @@
 /_includes/igraph-rversion
 /_includes/igraph-pyversion
 /c/doc
-/python/doc/*
 !/python/doc/index.html
+/python/doc/api/*
+/python/doc/tutorial/*
+/python/doc/stamp
 /r/doc
 /stamp
 /docs/stamp
