Add machinery for versioned docs to makefile - not yet HTML-templated properly

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 /_includes/igraph-cversion
 /_includes/igraph-rversion
 /_includes/igraph-pyversion
+/_includes/igraph-cversions
+/_includes/igraph-rversions
+/_includes/igraph-pyversions
 /c/doc
 !/python/doc/index.html
 /python/doc/api/*
