Support "latest" version for all 3 languages

--- a/_config.yml
+++ b/_config.yml
@@ -9,9 +9,13 @@ kramdown:
 url: "https://igraph.org"
 plugins:
   - jekyll-sitemap
+  - jekyll-redirect-from
 defaults:
   -
     scope:
       path: ""
     values:
       layout: "post"
+
+redirect_from:
+  json: false
