--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 /_build
+/.bundle
 /_includes/igraph-cversion
 /_includes/igraph-rversion
 /_includes/igraph-pyversion
@@ -12,6 +13,7 @@
 /python/doc/stamp
 /r/doc
 /stamp
+/vendor
 /docs/stamp
 /.jekyll-cache
 
