chore: clean up and ignore stuff that should be ignored

--- a/.gitignore
+++ b/.gitignore
@@ -6,14 +6,17 @@
 /_includes/igraph-cversions
 /_includes/igraph-rversions
 /_includes/igraph-pyversions
-/c/doc
+/c/html
+/c/pdf
+/c/stamp
 !/python/doc/index.html
 /python/doc/api/*
 /python/doc/tutorial/*
 /python/doc/stamp
-/r/doc
+/r/html
+/r/pdf
+/r/stamp
 /stamp
 /vendor
-/docs/stamp
 /.jekyll-cache
 
