--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ name: igraph &ndash; the network analysis package
 destination: docs
 future: true
 include: [ .htaccess, .htpasswd, _static, _sources, _images, _downloads, .nojekyll ]
-exclude: [ _build, _tools, Gemfile, Gemfile.lock, Makefile, REQUIREMENTS.md ]
+exclude: [ _build, _tools, Gemfile, Gemfile.lock, Makefile, REQUIREMENTS.md, '**/stamp' ]
 markdown: kramdown
 kramdown:
   input: GFM
