chore: updated gitignore for new folder structure

--- a/.gitignore
+++ b/.gitignore
@@ -9,10 +9,9 @@
 /c/html
 /c/pdf
 /c/stamp
-!/python/doc/index.html
-/python/doc/api/*
-/python/doc/tutorial/*
-/python/doc/stamp
+/python/api
+/python/tutorial
+/python/stamp
 /r/html
 /r/pdf
 /r/stamp
