--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,21 @@
 /_build
+/.bundle
 /_includes/igraph-cversion
 /_includes/igraph-rversion
 /_includes/igraph-pyversion
-/c/doc
-!/python/doc/index.html
-/python/doc/api/*
-/python/doc/tutorial/*
-/python/doc/stamp
-/r/doc
+/_includes/igraph-cversions
+/_includes/igraph-rversions
+/_includes/igraph-pyversions
+/c/html
+/c/pdf
+/c/stamp
+/python/api
+/python/tutorial
+/python/stamp
+/r/html
+/r/pdf
+/r/stamp
 /stamp
-/docs/stamp
+/vendor
 /.jekyll-cache
 
