refactor: config rewritted to use the default _site/ output folder

--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,7 @@
 /_build
-/_includes/igraph-cversion
-/_includes/igraph-rversion
-/_includes/igraph-pyversion
-/_includes/igraph-cversions
-/_includes/igraph-rversions
-/_includes/igraph-pyversions
-/c/html
-/c/pdf
+/_site
 /c/stamp
-/python/api
-/python/tutorial
-/python/versions
 /python/stamp
-/r/html
-/r/pdf
 /r/stamp
 /stamp
 /vendor
