--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,7 @@
 name: igraph &ndash; the network analysis package
-destination: docs
 future: true
 include: [ .htaccess, .htpasswd, _static, _sources, _images, _downloads, .nojekyll ]
-exclude: [ _build, _tools, Gemfile, Gemfile.lock, Makefile, REQUIREMENTS.md, '**/stamp' ]
+exclude: [ _build, _tools, Gemfile, Gemfile.lock, Makefile, REQUIREMENTS.md, docs, '**/stamp' ]
 markdown: kramdown
 kramdown:
   input: GFM
