--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,8 @@ plugins:
   - jekyll-feed
   - jekyll-seo-tag
   - jekyll-sitemap
+feed:
+  posts_limit: 1000
 authors:
   - The igraph Team
 defaults:
